// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-radio-button: Default cases -> HTML logic should render a radio button with no label and a type of radio for input 1`] = `
<amplify-radio-button>
  <span class="amplify-ui--radio-button css-iud8ha">
    <input type="radio">
    <amplify-label></amplify-label>
  </span>
</amplify-radio-button>
`;

exports[`amplify-radio-button: Default cases -> HTML logic should render only class \`amplify-ui--radio-button\` when style override is set to true 1`] = `
<amplify-radio-button style-override="true">
  <span class="amplify-ui--radio-button">
    <input type="radio">
    <amplify-label></amplify-label>
  </span>
</amplify-radio-button>
`;
